# control-groundsignal

./: README.md
high_level_control/: CMakeLists.txt  package.xml
high_level_control/include/high_level_control/: ground_station.h  high_level_control_interface.h
high_level_control/launch/: ground_run.launch  simple_run.launch
high_level_control/msg/: MavAction.msg  MissionState.msg  SubregionData.msg
high_level_control/src/: ground_station.cpp  ground_station_runner.cpp  high_level_control_interface.cpp  high_level_runner.cpp
high_level_control/src/examples/: offb_auto_1_no_namespace.cpp  offb_auto_1_uav1.cpp  offb_auto_1_uav2.cpp  offb_auto_2.cpp  offb_auto_2_vertical.cpp  offb_node_1.cpp  offb_node_1_no_namespace.cpp  offb_node_2.cpp
high_level_control/srv/: GuiPathData.srv
mavros/mavros/src/lib/: uas_data.cpp
multimaster_fkie/master_discovery_fkie/launch/: master_discovery_612.launch  master_discovery_613.launch  master_discovery_arg.launch
multimaster_fkie/master_sync_fkie/launch/: master_sync.launch  master_sync_312.launch  master_sync_add1.launch  master_sync_add2.launch  master_sync_add3.launch  master_sync_add4.launch  master_sync_correct.launch  master_sync_gs.launch
